# aramis-data-exporter

./: CITATION.cff  LICENSE  README.md  pyproject.toml  setup.py
aramis_exporter/: __init__.py  utils.py
dlr_aramis_exporter/: __init__.py  utils.py
test_scripts/: equivalent_strain.py  nodemap_export.py
